<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.example.home.quiz.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/headingText"
            android:text="@string/Heading" />

        <TextView
            style="@style/TextViewTheme"
            android:text="@string/question_1" />

        <RadioGroup
            android:id="@+id/q1_radio_buttons"
            style="@style/RadioGroupTheme">

            <RadioButton
                android:id="@+id/q1_radio_button_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_choice_1" />

            <RadioButton
                android:id="@+id/q1_radio_button_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_choice_2" />

            <RadioButton
                android:id="@+id/q1_radio_button_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_choice_3" />

            <RadioButton
                android:id="@+id/q1_radio_button_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_choice_4" />
        </RadioGroup>


        <TextView
            style="@style/TextViewTheme"
            android:text="@string/question_2" />

        <RadioGroup
            android:id="@+id/q2_radio_buttons"
            style="@style/RadioGroupTheme">

            <RadioButton
                android:id="@+id/q2_radio_button_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2_choice_1" />

            <RadioButton
                android:id="@+id/q2_radio_button_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2_choice_2" />

            <RadioButton
                android:id="@+id/q2_radio_button_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2_choice_3" />

            <RadioButton
                android:id="@+id/q2_radio_button_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2_choice_4" />
        </RadioGroup>


        <TextView
            style="@style/TextViewTheme"
            android:text="@string/question_3" />

        <RadioGroup
            android:id="@+id/q3_radio_buttons"
            style="@style/RadioGroupTheme">

            <RadioButton
                android:id="@+id/q3_radio_button_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3_choice_1" />

            <RadioButton
                android:id="@+id/q3_radio_button_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3_choice_2" />

            <RadioButton
                android:id="@+id/q3_radio_button_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3_choice_3" />

            <RadioButton
                android:id="@+id/q3_radio_button_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3_choice_4" />
        </RadioGroup>


        <TextView
            style="@style/TextViewTheme"
            android:text="@string/question_4" />

        <RadioGroup
            android:id="@+id/q4_radio_buttons"
            style="@style/RadioGroupTheme">

            <RadioButton
                android:id="@+id/q4_radio_button_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_choice_1" />

            <RadioButton
                android:id="@+id/q4_radio_button_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_choice_2" />

            <RadioButton
                android:id="@+id/q4_radio_button_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_choice_3" />

            <RadioButton
                android:id="@+id/q4_radio_button_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_choice_4" />
        </RadioGroup>

        <TextView
            style="@style/TextViewTheme"
            android:text="@string/question_5" />

        <RadioGroup
            android:id="@+id/q5_radio_buttons"
            style="@style/RadioGroupTheme">

            <RadioButton
                android:id="@+id/q5_radio_button_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5_choice_1" />

            <RadioButton
                android:id="@+id/q5_radio_button_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5_choice_2" />

            <RadioButton
                android:id="@+id/q5_radio_button_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5_choice_3" />

            <RadioButton
                android:id="@+id/q5_radio_button_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5_choice_4" />
        </RadioGroup>

        <TextView
            style="@style/TextViewTheme"
            android:text="@string/question_6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox1"
                style="@style/checkBoxTheme"
                android:text="@string/q6_choice_1" />

            <CheckBox
                android:id="@+id/checkBox2"
                style="@style/checkBoxTheme"
                android:text="@string/q6_choice_2" />

            <CheckBox
                android:id="@+id/checkBox3"
                style="@style/checkBoxTheme"
                android:text="@string/q6_choice_3" />

            <CheckBox
                android:id="@+id/checkBox4"
                style="@style/checkBoxTheme"
                android:text="@string/q6_choice_4" />
        </LinearLayout>

        <TextView
            style="@style/TextViewTheme"
            android:text="@string/question_7" />

        <EditText
            android:id="@+id/editText_7"
            style="@style/editTextTheme" />

        <Button
            style="@style/buttonTheme"
            android:onClick="findScore"
            android:text="@string/submit" />


    </LinearLayout>
</ScrollView>
